# compute

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  kernels.hpp  kernels_generic.cpp  main.cpp
conv/: CMakeLists.txt  kernels.cpp  kernels.hpp  main.cpp
integration/: CMakeLists.txt
integration/midpoint/: CMakeLists.txt  README.md  baseline.hpp  baseline_test.cpp  omp_simd.hpp  omp_simd_test.cpp
integration/util/: CMakeLists.txt  fn.cpp  fn.hpp
matmul/: CMakeLists.txt  benchmark.cpp  kernel.cpp  kernel.hpp  matmul.py  test.cpp
predication/: README.md  main.cpp  predication.cpp  predication.hpp
prefix/: CMakeLists.txt  README.md  kernels.cpp  kernels.hpp  main.cpp
sandbox/: CMakeLists.txt  permute_avx512.cpp  permute_generic.cpp
stencil/: CMakeLists.txt  kernels.hpp  kernels_generic.cpp
